--- a/BooksClient/Html/index.html
+++ b/BooksClient/Html/index.html
@@ -8,21 +8,68 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+<style>
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0,0,0,0.4);
+        }
+        .modal-content {
+            background-color: #fefefe;
+            margin: 15% auto;
+            padding: 0;
+            border: 1px solid #888;
+            width: 80%;
+        }
+        .modal-header {
+            padding: 10px;
+            background-color: #f1f1f1;
+            border-bottom: 1px solid #ddd;
+        }
+        .modal-body {
+            padding: 20px;
+        }
+        .modal-footer {
+            padding: 10px;
+            background-color: #f1f1f1;
+            border-top: 1px solid #ddd;
+        }
+        .closeBtn {
+            color: #aaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+        }
+        .closeBtn:hover,
+        .closeBtn:focus {
+            color: black;
+            text-decoration: none;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
-    <header class="container">
-        <div class="row align-items-center">
-            <div class="col-6">
-                <h1 class="nav-title">My App</h1>
-            </div>
+    <header id="header-container"></header>
 
-            <div class="col-6 text-end">
-                <nav>
-                    <button class="btn btn-primary me-2">Login</button>
-                    <button class="btn btn-secondary">Register</button>
-                </nav>
-            </div>
-        </div>
-    </header>
+    <script src="../Js/ajaxCalls.js"></script>
+    <script src="../Js/headerJs.js"></script>
+    <script>
+        $(document).ready(function() {
+            // Load header.html into the header-container div
+            $('#header-container').load('header.html', function() {
+                // Add event listeners after loading the HTML
+                LoginRegisterModalFunc();
+            });
+
+            
+        });
+    </script>
 </body>
 </html>
