--- a/BooksClient/Html/index.html
+++ b/BooksClient/Html/index.html
@@ -146,8 +146,7 @@
 </head>
 <body>
     <header id="header-container"></header>
-    <button id="fetchAuthorsButton">Fetch Authors Data</button>
-    <div id="output"></div>    
+    <!-- <button id="fetchAuthorsButton">Fetch Authors Data</button> -->
     
     <script src="../Js/ajaxCalls.js"></script>
     <script src="../Js/headerJs.js"></script>
