--- a/BooksClient/Html/AuthorsPage.html
+++ b/BooksClient/Html/AuthorsPage.html
@@ -9,7 +9,7 @@
     <!--<button id="insertBTN">Insert button</button>-->
     <!--<button id="getBTN">GET ALL button</button>-->
     <button id="GoHomeBtn">Home</button>
-    <div id="Authors-list"></div>
+    <main id="Authors-list"></main>
 
     <script src="../Js/ajaxCalls.js"></script>
     <script src="../Js/Authors.js"></script>
