--- a/BooksClient/Html/AuthorsPage.html
+++ b/BooksClient/Html/AuthorsPage.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>Authors</title>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <link href="../Css/AuthorDesign.css" rel="stylesheet" />
 </head>
 <body>
     <!--<button id="insertBTN">Insert button</button>-->
