--- a/BooksClient/Html/AuthorsPage.html
+++ b/BooksClient/Html/AuthorsPage.html
@@ -1,76 +1,4 @@
-﻿<!--<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <title>Authors</title>
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-    <link href="../Css/AuthorDesign.css" rel="stylesheet" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-</head>
-<body>
-<button id="GoHomeBtn ">Home</button>
-<button id="prevPageBtn">Previous</button>
-<button id="nextPageBtn">Next</button>
-<main id="Authors-list">
-
-</main>
- Modal Structure
-<div id="authorModal" class="modal col-12">
-        <div class="modal-content  col-12 col-lg-4 col-md-2 ">
-            <span class="close-button">&times;</span>
-            <h2 id="modal-author-name">Author Name</h2>
-            <img id="modal-author-image" src="" alt="Author Image">
-            <p id="modal-author-bio">Author Bio</p>
-            <p id="modal-author-topWork"></p>
-            <p id="modal-author-workCount"></p>
-        </div>
-    </div>
-
-    <script src="../Js/ajaxCalls.js"></script>
-    <script src="../Js/Authors.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</body>
-</html>-->
-<!--<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <title>Authors</title>
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-    <link href="../Css/AuthorDesign.css" rel="stylesheet" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-</head>
-<body>
-    <button id="GoHomeBtn" class="btn btn-primary">Home</button>
-    <button id="prevPageBtn" class="btn btn-secondary">Previous</button>
-    <button id="nextPageBtn" class="btn btn-secondary">Next</button>
-    <main id="Authors-list"></main>
-<div class="modal fade" id="authorModal" tabindex="-1" aria-labelledby="authorModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="modal-author-name">Author Name</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body col-4 col-md-2">
-                    <img id="modal-author-image" class="img-fluid" src="" alt="Author Image">
-                    <p id="modal-author-bio">Author Bio</p>
-                    <p id="modal-author-topWork"></p>
-                    <p id="modal-author-workCount"></p>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <script src="../Js/ajaxCalls.js"></script>
-    <script src="../Js/Authors.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</body>
-</html>-->
-
-
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
