--- a/BooksClient/Html/AuthorsPage.html
+++ b/BooksClient/Html/AuthorsPage.html
@@ -17,9 +17,11 @@
     <div class="modal fade " id="authorModal" tabindex="-1" aria-labelledby="authorModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered ">
             <div class="modal-content col-xs-12 col-md-6 col-lg-2">
+                <div class="XmodalBtn">
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
                 <div class="modal-header">
                     <h5 class="modal-title" id="modal-author-name">Author Name</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     <img id="modal-author-image" class="img-fluid" src="" alt="Author Image">
