--- a/BooksClient/Html/header.html
+++ b/BooksClient/Html/header.html
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="row align-items-center">
       <div class="col-6">
-          <h1 class="nav-title">My App</h1>
+          <h1 class="nav-title">My Library</h1>
       </div>
 
       <div class="col-6 text-end">
