--- a/BooksClient/Html/test.html
+++ b/BooksClient/Html/test.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html "-//W3C//DTD XHTML 1.0 Strict//EN"
+<!DOCTYPE html "-//W3C//DTD XHTML 1.0 Strict//EN"
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
@@ -20,7 +20,7 @@
 <body>
     <div id="viewerCanvas" style="width: 600px; height: 500px;"></div>
 </body>
-</html> -->
+</html>
 
 
 <!-- <!DOCTYPE html "-//W3C//DTD XHTML 1.0 Strict//EN"
