--- a/BooksClient/Html/AdminPage.html
+++ b/BooksClient/Html/AdminPage.html
@@ -3,20 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Library</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <!-- DataTables CSS -->
-    <link href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.min.css" rel="stylesheet">
+    <title>Admin Page</title>
+
+<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+
+<link href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.min.css" rel="stylesheet">
     <link href="https://cdn.datatables.net/1.10.21/css/dataTables.bootstrap4.min.css" rel="stylesheet">
-    <link href="../Css/AdminDesign.css" rel="stylesheet" />
 </head>
 <body>
     <h1>Hello Admin</h1>
     <a href="index.html">Go back</a>
 
     <div class="container mt-5">
-        <h1 class="text-center">My Personal Library</h1>
+        <h1 class="text-center">Table</h1>
 
         <ul class="nav nav-tabs" id="myTab" role="tablist">
             <li class="nav-item">
@@ -35,29 +34,19 @@
                 <table id="booksTable" class="table table-striped table-bordered" style="width:100%">
                     <thead>
                         <tr>
-                            <th>Id</th>
-                            <th>Book Title</th>
+                            <th>Cover</th>
+                            <th>Title</th>
                             <th>Price</th>
-                            <th>Description</th>
                             <th>Language</th>
-                            <th>Image Reference</th>
-                            <th>Is Ebook</th>
-                            <th>Is Active</th>
-                            <th>Is Available</th>
-                            <th>Number Of Prints</th>
+                            <th>Type</th>
+                            <th>Active</th>
+                            <th>Available</th>
+                            <th>Prints</th>
+                            <th>Actions</th>
+                            <th>Description</th>
+                            <th>Edit</th>
                         </tr>
                     </thead>
-                    <tbody>
-                        <!-- Example row -->
-                        <tr>
-                            <td><img src="example_thumbnail.jpg" alt="cover" style="width: 50px; height: auto;"></td>
-                            <td>Example Book Title</td>
-                            <td>eBook</td>
-                            <td><a href="example_link.html" target="_blank">Read Online</a></td>
-                            <td><button class="btn btn-primary">Add to Read</button></td>
-                        </tr>
-                        <!-- Additional rows here -->
-                    </tbody>
                 </table>
             </div>
 
@@ -65,24 +54,13 @@
                 <table id="authorsTable" class="table table-striped table-bordered" style="width:100%">
                     <thead>
                         <tr>
-                            <th>Thumbnail</th>
-                            <th>Title</th>
-                            <th>Type</th>
-                            <th>Link</th>
-                            <th>Action</th>
+                            <th>Image</th>
+                            <th>Name</th>
+                            <th>Top Work</th>
+                            <th>Work Count</th>
+                            <th>Description</th>
                         </tr>
                     </thead>
-                    <tbody>
-                        <!-- Example row -->
-                        <tr>
-                            <td><img src="example_thumbnail.jpg" alt="cover" style="width: 50px; height: auto;"></td>
-                            <td>Example Book Title</td>
-                            <td>Physical</td>
-                            <td><a href="example_link.html" target="_blank">Read Online</a></td>
-                            <td><button class="btn btn-success">Mark as Purchased</button></td>
-                        </tr>
-                        <!-- Additional rows here -->
-                    </tbody>
                 </table>
             </div>
 
@@ -90,33 +68,42 @@
                 <table id="usersTable" class="table table-striped table-bordered" style="width:100%">
                     <thead>
                         <tr>
-                            <th>Thumbnail2</th>
-                            <th>Title</th>
-                            <th>Type</th>
-                            <th>Link</th>
-                            <th>Action</th>
+                            <th>ID</th>
+                            <th>Email</th>
+                            <th>Name</th>
+                            <th>Is Active</th>
+                            <th>Edit</th>
                         </tr>
                     </thead>
-                    <tbody>
-                        <!-- Example row -->
-                        <tr>
-                            <td><img src="example_thumbnail.jpg" alt="cover" style="width: 50px; height: auto;"></td>
-                            <td>Example Book Title</td>
-                            <td>eBook</td>
-                            <td><a href="example_link.html" target="_blank">Read Online</a></td>
-                            <td><button class="btn btn-danger">Remove from Purchased</button></td>
-                        </tr>
-                        <!-- Additional rows here -->
-                    </tbody>
                 </table>
             </div>
         </div>
     </div>
 
-    <!-- jQuery and Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+    <div class="modal fade" id="actionModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalLabel">Action Modal</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <!-- Content will be dynamically loaded here -->
+                    <p id="modalContent">Details will be displayed here.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.21/js/dataTables.bootstrap4.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
+
+
+    <script src="../Js/ajaxCalls.js"></script>
     <script src="../Js/Admin.js"></script>
 </body>
-</html>
+ </html>
