--- a/BooksClient/Html/AuthorsPage.html
+++ b/BooksClient/Html/AuthorsPage.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <button id="GoHomeBtn" class="btn btn-primary">Home</button>
+
     <main id="Authors-list" class="container"></main>
 
     <!-- Modal -->
@@ -36,7 +37,8 @@
         <button id="nextPageBtn" class="btn btn-secondary">Next</button>
     </div>
     <script src="../Js/ajaxCalls.js"></script>
-    <script src="../Js/AuthorsJS.js"></script>
+    <!--<script src="../Js/AuthorsJS.js"></script>-->
+    <script src="../Js/Authors.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
