--- a/BooksClient/Html/myLibrary.html
+++ b/BooksClient/Html/myLibrary.html
@@ -4,51 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Library</title>
-    <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <!-- DataTables CSS -->
     <link href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.min.css" rel="stylesheet">
     <link href="https://cdn.datatables.net/1.10.21/css/dataTables.bootstrap4.min.css" rel="stylesheet">
-    <style>
-      .tab-pane {
-    min-height: 300px; /* Set a minimum height to ensure consistent height */
-    width: 100%; /* Ensure full width for each tab content */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.table {
-    width: 100%; /* Ensure that the table takes up the full width */
-}
-
-.nav-tabs {
-    display: flex;
-    justify-content: center; /* Center the tabs */
-    width: 100%; /* Ensure the tabs take up the full width */
-}
-
-.nav-tabs .nav-item {
-    flex: 1; /* Ensure each tab takes up an equal width */
-    text-align: center; /* Center the text inside each tab */
-}
-
-.container {
-    max-width: 1000px; /* Set a maximum width for the content to make it more consistent */
-    margin: auto; /* Center the content */
-}
-
-body {
-    background-color: #f8f9fa; /* Light background to make content stand out */
-    font-family: Arial, sans-serif;
-}
-
-h1 {
-    font-size: 2em;
-    margin-bottom: 20px;
-}
-
-    </style>
+    <link rel="stylesheet" href="../Css/header.css">
+    <link rel="stylesheet" href="../Css/myLibrary.css">
 </head>
 <body>
   <main class="container mt-5">
@@ -80,12 +40,10 @@ h1 {
                     </tr>
                 </thead>
                 <tbody>
-                    <!-- Data will be rendered here -->
                 </tbody>
             </table>
         </div>
         
-        <!-- Books Read Tab -->
         <div class="tab-pane fade" id="read" role="tabpanel" aria-labelledby="read-tab">
             <table id="booksReadTable" class="table table-striped table-bordered" style="width:100%">
                 <thead>
@@ -98,7 +56,6 @@ h1 {
                     </tr>
                 </thead>
                 <tbody>
-                    <!-- Data will be rendered here -->
                 </tbody>
             </table>
         </div>
@@ -116,7 +73,6 @@ h1 {
                     </tr>
                 </thead>
                 <tbody>
-                    <!-- Data will be rendered here -->
                 </tbody>
             </table>
         </div>
@@ -124,7 +80,6 @@ h1 {
 </main>
 
 
-    <!-- jQuery, Bootstrap JS, and DataTables JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.21/js/dataTables.bootstrap4.min.js"></script>
