--- a/BooksClient/Html/header.html
+++ b/BooksClient/Html/header.html
@@ -14,7 +14,7 @@
     </div>
   </div>
   
-  <div id="loginModal" class="modal">
+  <div id="loginModal" class="modalLoginReg">
       <div class="modal-content">
           <div class="modal-header">
               <span id="closeLoginBtn" class="closeBtn">&times;</span>
@@ -39,7 +39,7 @@
       </div>
   </div>
     
-  <div id="registerModal" class="modal">
+  <div id="registerModal" class="modalLoginReg">
       <div class="modal-content">
           <div class="modal-header">
               <span id="closeRegisterBtn" class="closeBtn">&times;</span>
