--- a/BooksClient/Html/myLibrary.html
+++ b/BooksClient/Html/myLibrary.html
@@ -70,6 +70,7 @@
                         <th>Type</th>
                         <th>Link</th>
                         <th>Action</th>
+                        <th>Put book for sale</th>
                     </tr>
                 </thead>
                 <tbody>
