--- a/BooksClient/Html/userQuiz.html
+++ b/BooksClient/Html/userQuiz.html
@@ -5,12 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Application</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../Css/header.css">
     <link rel="stylesheet" href="../Css/quiz.css">
     <style>
       
     </style>
 </head>
 <body>
+    <header id="header-container"></header>
+    
     <div class="container quiz-container" id="homePage">
         <h1 class="text-center">Quiz Application</h1>
         <button id="startQuiz" class="btn btn-primary btn-lg">Start Quiz</button>
